# OSX_10_0

bind-5/: Makefile
bind-5/bind/: Makefile
bind-5/bind/contrib/: README
bind-5/bind/contrib/adm/: ADM-spoof.c  ADMDNS2.c  ADMdnsfuckr.c  ADMkillDNS.c  ADMnOg00d.c  ADMsnOOfID.c  ADMsniffID.c  Howto  README  adm-nxt.c  bpf.h  dns.h  ip.h  pcap.h  udp.h
bind-5/bind/contrib/arlib/: Makefile  arlib.3  arlib.c  arlib.h  sample.c
bind-5/bind/contrib/cider2named/: INSTRUCTIONS  Makefile  cider2named.awk  cider2named.sh  named.ca  soa_file
bind-5/bind/contrib/decwrl/: .cvsignore  Distfile.datadir  Makefile  Makefile.datadir  gethost.c  mkdb.pl  mkservers.pl  paservers
bind-5/bind/contrib/dns_signer/: Makefile  add_labels.awk
bind-5/bind/contrib/dnsp/: README  dnsp.c
bind-5/bind/contrib/dnsparse/: README  dns2hosts  dnslex.c  dnsmkptr  dnsparse.pl  dnstest  domlist  mkhosts  simphosts  zonelist
bind-5/bind/contrib/dnswalk/: CHANGES  README  TIPS  TODO  dnswalk  dnswalk.1  makereports
bind-5/bind/contrib/doc/: INFO  README  doc  doc.8  doc.txt  doc1.awk  log.isi.edu.
bind-5/bind/contrib/getkeyby/: Makefile  README  getkey.c  getkeyby.c  getkeyby.h  parseresp.c
bind-5/bind/contrib/host/: Makefile  RELEASE_NOTES  defs.h  glob.h  host.1  host.h  info.c  list.c  main.c  misc.c  type.h  util.c  vers.c
bind-5/bind/contrib/inaddrtool/: README  inaddrtool
bind-5/bind/contrib/lamers/: Makefile  lamers.sh
bind-5/bind/contrib/manyhosts/: Makefile  manyhosts.c
bind-5/bind/contrib/mdnkit/: DISTFILES  Makefile.in  NEWS  README  README.ja  acconfig.h  configure.in  make.os2  make.wnt
bind-5/bind/contrib/misc/: bstat  checker  checksoa.pl  ctldns.sh  dns-peers.info  dnsck  dnsfind.shar  dnsrpt  dnstools.shar  gencidrzone  graphstats  makezones  makezones.info  netbsd-shlib.shar  normalize_zone.pl  nscount.mime  reload  resparse-1.0-info  settransfer-gaine.shar  settransfer.shar  settransfer_mende.shar  soa-easy.shar  update-rootcache  update-soa.csh  update_bindcache  xdns-info  xstats-reporter
bind-5/bind/contrib/multizdb/: MULTIZDB  MZDB.patch  UNSHAR.HDR  ns_init.c
bind-5/bind/contrib/netadm/: netadm.conf.cacheonly  netadm.conf.example  netadm.conf.forward  netadm.pl
bind-5/bind/contrib/nextstep/: next_diffs
bind-5/bind/contrib/ninit/: ninit.c
bind-5/bind/contrib/nslint-1.5.1/: CHANGES  FILES  INSTALL  Makefile.in  README  aclocal.m4  configure  configure.in  nslint.8  nslint.c
bind-5/bind/contrib/nslint-1.5.1/lbl/: gnuc.h  os-irix5.h  os-osf3.h  os-solaris2.h  os-sunos4.h  os-ultrix4.h
bind-5/bind/contrib/nutshell/: KAHNT-PATCH  ch06.canon.perl  ch07.bstat.494  ch07.bstat.811  ch07.get_cache.sh  ch09.check_del.811.c  ch09.check_del.c  ch11.ip_to_name.perl  ch13.check_soa.c  ch14.check_soa.perl  ch14.check_soa.v4.c  ch14.check_soa.v8.c  h2n  h2n.man
bind-5/bind/contrib/old/: Makefile  nsquery.c  nstest.c
bind-5/bind/contrib/os2-emx/: diffs.txt  readme.txt
bind-5/bind/contrib/query-loc-0.0.1/: INSTALL  Makefile  README  README.mail  loc.c  loc.h  query-loc.c
bind-5/bind/contrib/resparse-1.3/: ChangeLog  HPUX.Install  Makefile.in  README  README.HPPD  module.mk  res_copy.c  res_info.c  res_parse.c  res_print.c  resparse.dsp  testres.c
bind-5/bind/contrib/snoof/: Makefile  README  bpf.h  dns.h  pcap.h  snoof.c
bind-5/bind/contrib/sqlbind-8/: CHANGES  README  USAGE  table.db
bind-5/bind/contrib/sqlbind-8/src/: Makefile.in  acconfig.h  bind-patch.diff  config.h.in  configure  configure.in  functions.c  main.c  mysql.c  sqlbind.conf  sqlbind.h  update.c
bind-5/bind/contrib/srv/: Makefile  README  main.c  srv.c  srv.h
bind-5/bind/contrib/tplb/: NOTES
bind-5/bind/contrib/trnamed/: README  trnamed
bind-5/bind/contrib/umich/: dnsstats  zt
bind-5/bind/contrib/updatehosts-1.1.0/: ANNOUNCE  CHANGES  INSTALL  Makefile.in  OVERVIEW  README  bindv8conf_lister.l  configure  configure.in  cvtstatic.pl  cvtzone.pl  domain_list.pl  env.c  env.h  fields.pl  genbootp.pl  gendhcp.pl  gendns.pl  genstatic.sh  installdb.pl  parse_line.pl  poke_dhcp.c  poke_dhcp.env  poke_ns.c  poke_ns.env  readinfo.pl  readinfo_pp.pl  tail_log.pl  udh_stats.pl  updatehosts.env  updatehosts.sh
bind-5/bind/contrib/updatehosts-1.1.0/db/: cname  global  main  mx  ns  options  secondary  soa  subnet  txt
bind-5/bind/contrib/updatehosts-1.1.0/man/: Makefile.in  bindv8conf_lister.1  cvtstatic.1  cvtzone.1  gendhcp.1  gendns.1  poke_dhcp.1  poke_ns.1  readinfo.1  readinfo_pp.1  updatehosts.1
bind-5/bind/contrib/yaddas/: README  db.test  dns2host  host2dns  hosts.example  templ.10  templ.somewhere.net
bind-5/bind/contrib/z0ne/: README  README.mail  z0ne.c
bind-5/bind/doc/bog/: .cvsignore  manage.me
bind-5/bind/src/: .cvsignore  DNSSEC  Makefile
bind-5/dpkg/: control
(+1030 files in other folders)
